--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://masatonakatsuji2021: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@github.com/masatonakatsuji2021/hachiware_tool.git"
+    "url": "git+https://github.com/masatonakatsuji2021/hachiware_tool.git"
   },
   "keywords":[
     "javascript",
